--- a/src/pages/Brands.module.css
+++ b/src/pages/Brands.module.css
@@ -48,6 +48,7 @@
   font-size: var(--fs-14);
   margin-top: 40px;
   margin-bottom: 20px;
+  margin-left: 30px;
   text-transform: none;
 }
 
